--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -14,12 +14,20 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
     }
+
+    // 添加这个配置块来设置 Java 版本
+    gradle.beforeProject { project ->
+        project.plugins.withType(JavaPlugin) {
+            project.sourceCompatibility = JavaVersion.VERSION_21
+            project.targetCompatibility = JavaVersion.VERSION_21
+        }
+    }
 }
 
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
-    id "com.android.application" version "7.3.0" apply false
-    id "org.jetbrains.kotlin.android" version "1.7.10" apply false
+    id "com.android.application" version "8.8.0" apply false
+    id "org.jetbrains.kotlin.android" version "2.1.0" apply false
 }
 
 include ":app"
