--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
   cupertino_icons: ^1.0.6
   material_design_icons_flutter: ^6.0.0
   intl: ^0.20.1
+  sqflite: ^2.4.1
+  path: ^1.9.1
+  path_provider: ^2.1.5
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
